Added main content and did some basic styling for the page.

--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,128 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+  <meta charset="UTF-8">
   <title>My Portfolio</title>
+  <link href="./styleBioPage.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Your Name</h1>
-  <p>Welcome to my Software Development Portfolio!</p>
-  <p>Skills: JavaScript, Python, React, Node.js</p>
-  <p>Projects: ...</p>
+
+  <div class="full-width-box">
+    <h1 class="common-text size-large color-primary">About Me</h1>
+    <p class="common-text size-small color-secondary">Thank you for visiting my page!
+      <br>I’m a passionate imaging scientist who loves diving deep into quantitative analysis and getting hands-on with software and algorithm development — whether it’s in academia or the industry. I’m all about cracking tough data puzzles, building smart models, and crafting clever algorithms. Managing projects and clinical research? Yep, that’s my jam too.
+<br>
+<br>
+What really gets me fired up is solving tricky problems with a bit of critical thinking and using advanced analytics to tackle healthcare challenges. Right now, I’m excited to take my expertise further by diving into data science and web/app — always learning, growing, and pushing the boundaries of what data can do.
+<br>
+<!--<br>
+In short, I’m here to turn complex data into clear insights that can make a real difference!</p>-->
+    <br>
+    <img src="" alt="Profile Photo">
+
+    <h1 class="common-text size-large color-primary">Get in touch!</h1>
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+      <a href="mailto:maira_tariq@icloud.com" title="Send Email" style="font-size:24px; margin-right:15px;margin-left:15px;">
+      <i class="fas fa-envelope"></i>
+      </a>
+
+      <a href="https://www.linkedin.com/in/mtariqphd/" target="_blank" rel="noopener noreferrer" title="Visit LinkedIn Profile" style="font-size:24px;">
+  <i class="fab fa-linkedin"></i>
+      </a>
+  </div>
+
+  <fieldset class="skills-fieldset">
+  <legend class="skills-legend">Skills</legend>
+  <div class="skills">
+    <div class="skills-section">
+      <h2 class="common-text size-med color-secondary">Technical</h2>
+      <ul class="tech-skills size-small">
+        <li><strong>Programming:</strong> Python, MATLAB, C/C++, Java, R, JavaScript, Bash/Shell Scripting.</li>
+        <li><strong>Medical Imaging:</strong> image segmentation & registration, quantitative MRI analysis.</li>
+        <li><strong>Software Tools:</strong> Git, SVN, Eclipse, Visual Studio, MySQL.</li>
+        <li><strong>Data Analysis & Visualisation:</strong> Statistical analysis, data reporting, technical presentations.</li>
+        <li><strong>Machine Learning & Data Science:</strong> data preprocessing, feature extraction, model evaluation.</li>
+      </ul>
+    </div>
+  
+    <div class="skills-section">
+      <h3 class="common-text size-med color-secondary">Scientific research</h3>
+      <ul class="research size-small">
+        <li>Expertise in critical review of scientific literature.</li>
+        <li>Accomplished in planning and carrying out scientific experiments and evaluating the findings.</li>
+        <li>Skilled in presentation of scientific data through technical reports, verbal communication and oral presentations.</li>
+        <li>Experience working with medical imaging database (XNAT), and standardized medical imaging formats (DICOM, NIFTI).</li>
+      </ul>
+    </div>
+  </div>
+  </fieldset>
+ <!--
+  <div class="skills">
+    <h1 class="common-text size-large color-primary">Skills</h1>
+      <h2 class="common-text size-med color-secondary">Technical</h2>
+        <ul class="tech-skills size-small">
+           <img src="images/cs-icon.png" alt="CS" style="width:16px; vertical-align:middle; margin-right:6px;"> 
+          <li><strong>Programming:</strong> Python, MATLAB, C/C++, Java, R, JavaScript, Bash/Shell Scripting.
+          <li><strong>Medical Imaging:</strong> image segmentation & registration, quantitative MRI analysis.
+          <li><strong>Software Tools:</strong> Git, SVN, Eclipse, Visual Studio, MySQL.
+          <li></trong>Data Analysis & Visualisation:</strong> Statistical analysis, data reporting, technical presentations.
+          <li><strong>Machine Learning & Data Science:</strong> data preprocessing, feature extraction, model evaluation.
+        </ul>
+      <h3 class="common-text size-med color-secondary">Scientific research</h3>
+        <ul class="research size-small">
+          <li> Expertise in critical review of scientific literature.
+          <li> Accomplished in planning and carrying out scientific experiments and evaluating the findings.
+          <li> Skilled in presentation of scientific data through technical reports, verbal communication and
+oral presentations.
+          <li> Experience of working with medical imaging database (XNAT), and standardised medical
+imaging formats (DICOM, NIFTI)
+        </ul>
+  </div>
+  -->
+
+  <fieldset class="techExp-fieldset">
+  <legend class="techExp-legend">Technical Experience</legend>
+  
+  <div class="techExp">
+    <div class="techExp-section">
+      <h2 class="common-text size-med color-secondary">Postdoctoral research</h2>
+      <ul class="pd-exp size-small">
+        <li>Led design and evaluation of imaging biomarkers Magnetic Resonance Imaging </li>
+        <li>Integrated advanced image processing and quantitative analysis in human and phantom studies.</li>
+        <li>Collaborated in multi-disciplinary teams driving clinical imaging research</li>
+        <li></li>
+      </ul>
+    </div>
+  
+    <div class="techExp-section">
+      <h3 class="common-text size-med color-secondary">Software Development</h3>
+      <ul class="cs-exp size-small">
+        <li>Developed and debugged video processing applications incorporating machine learning-driven
+object tracking and background removal algorithms.</li>
+        <li>R&D in novel computer vision solutions for a video based social media application.</li>
+        <li></li>
+        <li></li>    
+      </ul>
+    </div>
+  </div>
+  </fieldset>
+
+  <div class="full-width-box">
+  <h1>Coming soon ... </h1>
+  <h2>A surprise section </h2>
+     <!-- have a section with a rnadom "bad" joke generator -> have
+      an animation of a cracker opening with a click and hold,
+      then joke is revealed along with some confetti-->
+  </div>
+
+  <!-- 
+  <div class="contact">
+    <h2 class="common-text size-large color-primary">Contact</h2>
+    <p class="common-text size-small color-secondary">Get in touch:  email or LinkedIn.</p>
+    <img src="https://via.placeholder.com/150x100?text=Contact+Me" alt="Contact Me">
+  </div>
+  -->
+
 </body>
 </html>
